# Bbarolo

./: .gitignore  CMakeLists.txt  README.md
CMake/: BbaroloConfigure.h.in
src/: bbarolo.cpp  bbarolo.h  bbarolo.hh
src/Arrays/: cube.cpp  cube.h  cube.hh  cube.tpp  header.cpp  header.hh  image.h  image.hh  image.tpp  param.cpp  param.h  param.hh  rings.h  rings.hh  search.tpp  stats.h  stats.hh  stats.tpp
src/Map/: detection.h  detection.hh  detection.tpp  object2D.h  object2D.hh  object2D.tpp  object3D.h  object3D.hh  object3D.tpp  objectgrower.h  objectgrower.hh  objectgrower.tpp  scan.h  scan.hh  scan.tpp  voxel.h  voxel.hh  voxel.tpp
src/Tasks/: ellprof.h  ellprof.hh  ellprof.tpp  galfit.h  galfit.hh  galfit.tpp  galfit_errors.tpp  galfit_min.tpp  galfit_out.tpp  galmod.h  galmod.hh  galmod.tpp  galwind.h  galwind.hh  galwind.tpp  moment.h  moment.hh  ringmodel.cpp  ringmodel.h  ringmodel.hh  slitfit.tpp  smooth3D.h  smooth3D.hh  smooth3D.tpp  spacepar.h  spacepar.hh  spacepar.tpp
src/Utilities/: conv2D.hh  conv2D.tpp  converter.cpp  converter.h  converter.hh  ellprof.hh  ellprof.tpp  galfit.cpp  galfit.hh  galfit.tpp  galfit_errors.tpp  galfit_min.cpp  galfit_min.tpp  galfit_out.tpp  galmod.hh  galmod.tpp  gnuplot.h  gnuplot.hh  interpolation.tpp  lsqfit.h  lsqfit.hh  lsqfit.tpp  moment.hh  paramguess.h  paramguess.hh  progressbar.cpp  progressbar.hh  ringmodel.cpp  ringmodel.hh  slitfit.tpp  smooth3D.hh  smooth3D.tpp  spacepar.hh  statistics.tpp  string.cpp  utils.cpp  utils.h  utils.hh  wcsUtils.cpp
